--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 }
 .header{
     background-img:src="https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&w=600"alt='fruits'>;
+    min-height:100px;
 }
 .header ul li{
     list-style-type: none;
