--- a/style.css
+++ b/style.css
@@ -26,4 +26,10 @@ p{
 }
 #navbar ul li{
     padding: 30px;
+    background-color: transparent;
+    width: 100vw;
+    height: 5rem;
+    position: fixed;
+    top: 0;
+    z-index: 11;
 }
