--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p{
 #navbar ul li{
     padding: 30px;
     background-color: transparent;
-    position: fixed;
+    position: absolute;
     
    
 }
