--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgb(118,118,160);
+    <img src='https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcRY0PIWJ-LaDy4Io71RjhCOcaAu1Hs_WlYoydlysiEqFUFHxqO1WiMaeEVWRiFw57-S64mHHfwUrIaNPjo'>
 }
 .header{
     background-image:url("https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&w=600");
