--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgb(118,118,160);
-    <img src='https://encrypted-tbn1.gstatic.com/licensed-image?'>
+    background-image:url("https://cdn11.bigcommerce.com/s-4d44c/images/stencil/1280x1280/products/31/119/Avocados__13437.1289619916.gif?c=2")
 }
 .header{
     background-image:url("https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&w=600");
