--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgb(118,118,160);
-    background-image:url("https://cdn11.bigcommerce.com/s-4d44c/images/stencil/1280x1280/products/31/119/Avocados__13437.1289619916.gif?c=2")
+    background-image:url("https://images.pexels.com/photos/108059/pexels-photo-108059.jpeg?auto=compress&cs=tinysrgb&w=600")
     background-size: 300px 100px;
 }
 .header{
