--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body{
     padding: 0;
     
     background-image:url("https://images.pexels.com/photos/108059/pexels-photo-108059.jpeg?auto=compress&cs=tinysrgb&w=600");
-    background-size: 300px 100px;
+    background-size: 150px;
+    width: 250px;
+    height: 150px;
 }
 .header{
     background-image:url("https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&w=600");
