--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 body{
     margin: 0;
     padding: 0;
-    
-    background-image:url("https://images.pexels.com/photos/108059/pexels-photo-108059.jpeg?auto=compress&cs=tinysrgb&w=600");
-    background-size: 150px;
-    width: 250px;
-    height: 150px;
+    background-color: rgb(70);
+    ;
+ 
 }
 .header{
     background-image:url("https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&w=600");
